[package]
name = "uuidmap"
version = "0.2.0"
edition = "2021"
description = "An ArrayHashMap implementation specialized for using a uuid (u128) as the key."
license = "AGPL-3.0-or-later"
repository = "https://github.com/AnneKitsune/uuidmap"
documentation = "https://docs.rs/uuidmap"

[dependencies]
rand = "0.9"
fxhash = "0.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false
